Fixed create method
